add to cart completed

--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -11,3 +11,8 @@
   .admin-login{
     background-color: rgb(240, 238, 236);
   }
+  .google-img{
+    width: 30px;
+    border:none;
+    border-radius: 20px;
+  }
